Version 1.4.0-dev
  * Add the optional YAML ZCFG support #4 and the zcfg2yaml converter
  * Return error messages that enable the service provider to quickly identify the root cause of errors due to configuration file syntax (ticket #90)
  * Fix logic in addMapToMap (ticket #91)
  * Enable AllowedValue and multiple Range definitions using default and supported blocks
  * Add the lastest revision number in version.h (available in Python ZOO-API)
  * Add the optional Ruby Language Support to the ZOO-Kernel with an API similar to the Python ZOO-API
  * Small rewrite of Python support
  * Inputs can be requested over https protocol (ticket #86)
  * Add capability to define both percentage of execution and a message (ticket #87). 
  * Add usid in lenv section used to generate an unique identifier based on time and the process identifier.
  * Add gdal_contour service
  * Add dynamic definition of serverAddress from the main section

Version 1.3.0-rc2
  * Fix POST Request issue (ticket #34)
  * Fix COOKIE gesture (ticket #79)
  * Remove verbose messages when using MapServer W*S (ticket #80)
  * Add COMMITTERS  and LICENSE files

Version 1.3.0-rc1

  * Updating ZOO.Class object with the OpenLayers.Class Updating ZOO.Class with the (ticket #64)
  * Correct the content of proj4js (ticket #63)
  * Enhance the COOKIE gesture (ticket #68)
  * Support for dataInputs URLEncoded and xlink:href (ticket #62)
  * Use the same object structure for JavaScript arguments than for Python
  * Add the Normalized Difference Vegetation Index service
  * Add importScripts function to JavaScript support (ticket #66)
  * Add multiple inputs values for the same identifier (ticket #72)
  * Add Python ZOO-API to access ZOO-Kernel internel functions
  * Add a [headers] section in main.cfg file to add specifics to header returned
  * Add support for multiple outputs for both GET and POST requests
  * Add Content-Length to the headers if the result is sized